mise à jour ajoutée

--- a/index.html
+++ b/index.html
@@ -208,11 +208,6 @@
             opacity: 1;
         }
         
-        /* Custom logo styling */
-        .bidene-logo {
-            filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.1));
-        }
-        
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .hero-title {
@@ -933,10 +928,7 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <div class="flex items-center space-x-2 mb-4">
-                        <div class="logo-container">
-                            <img src="images/logo.png" alt="Logo BIDENE SERVICES" class="h-10 w-auto object-contain" />
-                        </div>
+                    <div class="mb-4">
                         <div class="flex flex-col">
                             <span class="font-bold text-xl">BIDENE SERVICES</span>
                             <span class="text-sm text-gray-400">Votre Expert Informatique</span>
